--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,9 @@ title:              Clean Blog
 email:              your-email@example.com
 description:        A Blog Theme by Start Bootstrap
 author:             Start Bootstrap
-baseurl:            "/startbootstrap-clean-blog-jekyll"
-url:                "https://startbootstrap.github.io"
+baseurl:            "/jewishbookfindsblog/"
+url:                "https://israeldav.github.io"
+root:               "/"
 
 # Social Profiles
 twitter_username:   SBootstrap
