--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:              Jewish Book Finds
 email:              jewishbookfinds1@gmail.com
 description:        A blog about (old) jewish books 
-author:             Jewish Books
+author:             Jewish Book Finds
 baseurl:            "/"
 url:                "https://israeldav.github.io"
 root:               "/"
