--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ instagram_username:  jewishbookfinds
 #linkedin_username:
 
 # Add your google-analytics ID here to activate google analytics
-google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
+google_analytics:   UA-178894389-1 # out your google-analytics code
 
 # Build settings
 markdown:           kramdown
