--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:              Jewish Book Finds
+title:              Jewishbookfinds.com
 email:              jewishbookfinds1@gmail.com
 description:        A blog about (old) jewish books 
 author:             Jewish Book Finds
