--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              Jewishbookfinds.com
 email:              jewishbookfinds1@gmail.com
-description:        A blog about (old) jewish books 
+description:        A place to share my books and interest in modern Jewish history.  
 author:             Jewish Book Finds
 baseurl:            "/"
 url:                "https://israeldav.github.io"
