--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:              jewishbookfinds1@gmail.com
 description:        A place to share my books and interest in modern Jewish history.  
 author:             Jewish Book Finds
 baseurl:            "/"
-url:                "https://israeldav.github.io"
+url:                "https://jewishbookfinds.com"
 root:               "/"
 
 # Social Profiles
