updated email address

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:              Jewishbookfinds.com
-email:              jewishbookfinds1@gmail.com
+email:              info@jewishbookfinds.com
 description:        A place to share my books and interest in modern Jewish history.  
 author:             Jewish Book Finds
 baseurl:            "/"
